# Centrosome

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: code_coverage.yml
resource/: cli.yml
src/: datapack.rs  datapack_loader.rs  identifier.rs  lib.rs  main.rs  strategy.rs  utils.rs  zip_peaker.rs  zipper.rs
src/datapack/: mod.rs  resource.rs
src/datapacks/: data_structure.rs  datapack.rs  format.rs  mod.rs  namespace.rs  script.rs  script_file.rs  script_type.rs
src/datapacks/data_structure/: tag.rs
src/datapacks/traits/: data_holder.rs  data_tree.rs  merger.rs  mod.rs  setup.rs
src/iter/: duplicate.rs  mod.rs
src/zipper/: error.rs  mod.rs
test/reduce_complex_datapack/: pack.mcmeta
test/reduce_complex_datapack/data/boomber/advancements/: boomber.json
test/reduce_complex_datapack/data/boomber/advancements/banner_on_my_head/: banner_on_my_head.json
test/reduce_complex_datapack/data/boomber/advancements/banner_on_my_head/story/: equip_banner.json
test/reduce_complex_datapack/data/boomber/functions/banner_on_my_head/: setup.mcfunction
test/reduce_complex_datapack/data/boomber/functions/banner_on_my_head/banner/: target.mcfunction
test/reduce_complex_datapack/data/boomber/functions/banner_on_my_head/player/: check_for_banner.mcfunction  conditions.mcfunction  equip_banner.mcfunction  main.mcfunction  previous_item.mcfunction
test/reduce_complex_datapack/data/boomber/functions/banner_on_my_head/player/conditions/: curse.mcfunction  rotation.mcfunction
test/reduce_complex_datapack/data/boomber/tags/functions/banner_on_my_head/: load.json  loop.json
test/reduce_complex_datapack/data/global/advancements/: root.json
test/reduce_complex_datapack/data/minecraft/loot_tables/blocks/: shulker_box.json
test/reduce_complex_datapack/data/minecraft/tags/functions/: load.json  tick.json
