[package]
name = "datapack-merger"
version = "0.1.0"
authors = ["boomber"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.14.0", features = ["with_rayon"] }
clap = { version = "2.33.0", features = ["yaml"] }
colored = "1.9.2"
zip = "0.5.4"
rayon = "1.3.0"
pad = "0.1.6"
dialoguer = "0.5.0"
flate2 = "1.0.13"
tar = "0.4.26"