[package]
name = "centrosome"
version = "0.1.1"
authors = ["boomber"]
edition = "2018"
description = "A command-line application that merge datapacks into one"
homepage = "https://github.com/oOBoomberOo/Centrosome"
repository = "https://github.com/oOBoomberOo/Centrosome"
readme = "README.md"
keywords = ["cli", "minecraft", "datapack"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.14.0", features = ["with_rayon"] }
clap = { version = "2.33.0", features = ["yaml"] }
colored = "1.9.2"
zip = "0.5.4"
rayon = "1.3.0"
pad = "0.1.6"
dialoguer = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }