[package]
name = "centrosome"
version = "0.2.1"
authors = ["boomber"]
edition = "2018"
description = "A command-line application that merge datapacks into one"
homepage = "https://github.com/oOBoomberOo/Centrosome"
repository = "https://github.com/oOBoomberOo/Centrosome"
readme = "README.md"
keywords = ["cli", "minecraft", "datapack"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.47"
serde = { version = "1.0.104", features = ["derive"] }
